fix port table layout bug
Type: BF
Jira: HALO-774

--- a/client/applications/dashboard/style/layout.less
+++ b/client/applications/dashboard/style/layout.less
@@ -30,6 +30,7 @@ body,
       flex: 1;
       display: flex;
       z-index: 8;
+      overflow: hidden;
     }
   }
 }
